# pkgx.rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  justfile
.github/workflows/: cd.yml  check-and-lint.yaml  ci.coverage.yml.todo  ci.yaml  ci.yml  release-packaging.yaml.todo  test.yml.todo
cli/: Cargo.toml
cli/src/: main.rs
crates/cli/src/: args.rs
crates/lib/: Cargo.toml
docs/: README.md  SUMMARY.md  faq.md  getting-started.md  pkgx.md  scripting.md
docs/pkging/: pantry-api.md  pantry.md
lib/: Cargo.toml
src/: args.rs  cellar.rs  config.rs  env.rs  execve.rs  help.rs  hydrate.rs  install.rs  install_multi.rs  inventory.rs  main.rs  pantry.rs  pantry_db.rs  resolve.rs  sync.rs  types.rs  utils.rs
