[package]
name = "pkgx"
description = "Run anything"
version = "2.0.0-rc"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dirs-next = "2.0"
libsemverator = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
strum = "0.24"
strum_macros = "0.24"
rusqlite = "0.32.1"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.13", features = ["compat"] }
futures = "0.3.31"
indicatif = "0.17.9"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["process"] }
fs2 = "0.4.3"
serde_json = "1.0.135"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }

[profile.release]
lto = "fat"
