[package]
name = "pkgx"
description = "Run anything"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
rusqlite = "0.32.1"
regex = "1.11.1"
indicatif = "0.17.9"
nix = { version = "0.29.0", features = ["process"] }
serde_json = "1.0.135"
libpkgx = { path = "../lib" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }

[profile.release]
lto = "fat"
